layout issues

--- a/DESI_Night_Logs/Other_Report/templates/styles.css
+++ b/DESI_Night_Logs/Other_Report/templates/styles.css
@@ -46,7 +46,7 @@
 
 .bk-root .subt-style {
 	color: black;
-        width: 800px;
+        width: 1000px;
 	text-decoration: underline;
 	font-size:18pt;
 	font-style: bold;
